fail_AzureAppGatewayVNetDDoSProtectionValidator.tf
provider "azurerm" {
  features {}
}

resource "azurerm_resource_group" "rg" {
  name     = "rg-network"
  location = "East US"
}

resource "azurerm_virtual_network" "vnet" {
  name                = "insecure-vnet"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  address_space       = ["10.0.0.0/16"]
}
